...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7eff0"
    tools:context="me.finance.finance.CategoryActivity">

    <Button
        android:id="@+id/create_category"
        android:layout_width="375dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="add category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_category" />

    <EditText
        android:id="@+id/categoryName"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
...
